x.x.x
------------------
FIXES:
- Fixed the loss of parameters in the search of the bugs. (Amanda Accalai)

1.3.0 - 2014/07/28
------------------
CHANGES:
- Archived projects are filtered out when creating a new bug. (Alex Pagnoni)
- Opened by and assigned to fields are automatically set to the current user
  when creating a new bug. (Alex Pagnoni)
- Added project as item parent type. (Alex Pagnoni)
- Added support for iterations. (Alex Pagnoni)

NEW FEATURES:
- Added project autocomplete when creating a new bug. (Alex Pagnoni)

FIXES:
- Fixed wrong no ACL policy. (Alex Pagnoni)
- Fixed missing labels in items search results. (Alex Pagnoni)
- Fixed missing relations in assignedto and openedby fields. (Alex Pagnoni)



1.2.0 - 2014/02/02
------------------
CHANGES:
- Removed the empty value from bug fields, when there are list of values.
  (Alex Pagnoni)
- Removed customer field in bug item type. (Alex Pagnoni)



1.1.0
------------------
NEW FEATURES:
- Added "task" tag. (Alex Pagnoni)

CHANGES:
- Changed innowork-core depency to version 3.3. (Alex Pagnoni)



1.0.0 - 2014/01/15
------------------
- First release.